--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   
   <body>
     Hello World!
+    <p>Hola Mundo</p>
+    <h1>HELLO WORLD!</h1>
+    <h2>This is my first, github page</h2>
   </body>
 
 </html>
