--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; SUNEO</li><li> Nova<a href="http:www.novauniversitas.edu.mx">Universitas</a></li>
+					<li> SUNEO</li><li> Nova<a href="http:www.novauniversitas.edu.mx">Universitas</a></li>
 				</ul>
 			</footer>
 
