--- a/posts.html
+++ b/posts.html
@@ -174,7 +174,7 @@ http://jlizardo.blogspot.mx/2008/04/ventajas-y-desventajas-del-anlisis.html <br>
 					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; SUNEO</li><li> Nova<a href="http:www.novauniversitas.edu.mx">Universitas</a></li>
+					<li>SUNEO</li><li> Nova<a href="http:www.novauniversitas.edu.mx">Universitas</a></li>
 				</ul>
 			</footer>
 
