--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>Julio Andrés</strong> Padilla Cruz<br />
-				Lic. en Informática<br />
+				<h1><strong>Julio Andrés</strong> Padilla Cruz<br>
+				Lic. en Informática<br>
 			</header>
 
 		<!-- Main -->
