--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>Julio Andrés</strong> Padilla Cruz<br>
-				Lic. en Informática<br>
+				<h1><strong>Julio Andrés</strong> Padilla Cruz<br />
+				Lic. en Informática<br />
 			</header>
 
 		<!-- Main -->
@@ -58,7 +58,7 @@
 					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li> SUNEO</li><li> Nova<a href="http:www.novauniversitas.edu.mx">Universitas</a></li>
+					<li>&copy; SUNEO</li><li> Nova<a href="http:www.novauniversitas.edu.mx">Universitas</a></li>
 				</ul>
 			</footer>
 
