--- a/posts.html
+++ b/posts.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>Julio Andrés</strong> Padilla Cruz<br /><br />
+				<h1><strong>Julio Andrés</strong> Padilla Cruz<br /><br>
 			</header>
 
 		<!-- Main -->
