compuesto error sintáctico

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 				<div id="cuerpo_ensayo">
 
 <p id="post_text">
-La POO (Programación Orientada a Objetos) es una forma de analizar el mundo y llevar  el modelo del sistema a la programación, en donde los elementos del programa se agrupan en entidades conocidas como objetos, los cuales guardan un estado y tienen un comportamiento especifico, dichos objetos mantienen contacto a través de mensajes (que en la programación se conocen como métodos). Dicho lenguaje utiliza una herramienta importante conocida como abstracción de datos, que es básicamente el ocultamiento de detalles de la implementación de los objetos.
+La POO (Programación Orientada a Objetos) es una forma de analizar el mundo y llevar  el modelo de un sistema a la programación, en donde los elementos del programa se agrupan en entidades conocidas como objetos, los cuales guardan un estado y tienen un comportamiento especifico, dichos objetos mantienen contacto a través de mensajes (que en la programación se conocen como métodos). Dicho lenguaje utiliza una herramienta importante conocida como abstracción de datos, que es básicamente el ocultamiento de detalles de la implementación de los objetos.
 <br>La programación orientada a objetos nació a inicios de los 60's gracias al lenguaje Simula 67, aquel lenguaje fue base de Alan Kay para diseñar Smalltalk el primer lenguaje puro de POO, desde entonces éste ha tenido adaptaciones a otros lenguajes.
 </p>
 
