--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Informática</a>
+                <a class="navbar-brand" href="#page-top">Julio Andrés Padilla Cruz</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,10 +54,10 @@
                         <a href="#portfolio">Posts</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">PROGRAMS</a>
+                        <a href="#about">Programs</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">About of me</a>
+                        <a href="#contact">About me</a>
                     </li>
                 </ul>
             </div>
@@ -73,9 +73,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Julio Padilla</span>
-                        <hr class="star-light">
-                        <span class="skills">Julio Andrés Padilla Cruz</span>
+                         <span class="name">J</span> 
+<!--                        <hr class="star-light">
+                      <span class="skills">Julio Andrés Padilla Cruz</span> -->
                     </div>
                 </div>
             </div>
@@ -121,20 +121,31 @@
                     <p>Aún no hay programas disponibles.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>En breve se prepararán los primeros programas de Java</p>
+                    <p>En breve se prepararán los primeros programas de Java.</p>
                 </div>
-<!--                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div> -->
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
-        <p><blockquote>Actualmente estudio los cursos de Licenciatura de Quinto Semestre, en NovaUniversitas</p>
+	 <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>ABOUT ME</h2>
+                    <hr class="star-primary">
+
+                </div>
+            </div>
+	  <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>Actualmente me encuentro en el quinto semestre de la Licenciatura en Informática.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p></p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
@@ -212,31 +223,39 @@
 			
 			<!--my first post -->
 				<div id="cuerpo_ensayo">
+<p id="post_text">
+El Paradigma Orientado a Objetos surge a finales de los 70's con la intención de que las personas desarrollen código de acuerdo a un modelo consistente y que el mismo código sirva más adelante para utilizarlo de nuevo por los mismos programadores o por programadores externos, función extremadamente útil ya que los proyectos de software en general se hacen en equipo. </p>
 
 <p id="post_text">
 La POO (Programación Orientada a Objetos) es una forma de analizar el mundo y llevar  el modelo de un sistema a la programación, en donde los elementos del programa se agrupan en entidades conocidas como objetos, los cuales guardan un estado y tienen un comportamiento especifico, dichos objetos mantienen contacto a través de mensajes (que en la programación se conocen como métodos). Dicho lenguaje utiliza una herramienta importante conocida como abstracción de datos, que es básicamente el ocultamiento de detalles de la implementación de los objetos.
 <br>La programación orientada a objetos nació a inicios de los 60's gracias al lenguaje Simula 67, aquel lenguaje fue base de Alan Kay para diseñar Smalltalk el primer lenguaje puro de POO, desde entonces éste ha tenido adaptaciones a otros lenguajes.
 </p>
 
-<p id="post_text">
-El paradigma orientado a objetos surge con la intención de que las personas desarrollen código de acuerdo a un modelo consistente y que el mismo código sirva más adelante para utilizarlo de nuevo por los mismos programadores o por programadores externos, función extremadamente útil ya que los proyectos de software en general se hacen en equipo. </p>
 
 <p id="post_text">
-El paradigma orientado a objetos tuvo auge cuando se desarrolla Smalltalk, se dice que Smalltalk es un lenguaje puro de programación orientada a objetos. Smalltalk implementa las características de dicha programación:<br><br>
+El Paradigma Orientado a Objetos tuvo auge cuando se desarrolla Smalltalk, se dice que Smalltalk es un lenguaje puro de programación orientada a objetos. Smalltalk implementa las características de dicha programación:<br><br>
 
 <span id="post_subtitle">Características</span></p><br>
 
 <p id="post_cita">
 (AUTHOR BUDD, T., (1994). <i>Introducción a la Programación Orientada a Objetos </i> (cap.  1). Recuperado de https://www.fdi.ucm.es/profesor/jpavon/poo/01Ejemplos.pdf)
-<p id="post_text">
-<ol>
+<!-- <ol>
 	<li>Todo son objetos.</li>
 	<li>Los objetos funcionan haciéndose peticiones de uno a otro mediante paso de mensajes.</li>
 	<li>Cada objeto tiene su propia memoria, que consta de otros objetos.</li>
 	<li>Cada objeto es un ejemplar (instancia) de una clase. Una clase agrupa objetos similares.</li>
 	<li>La clase es el repositorio del comportamiento asociado con un objeto.</li>
-	<li>Las clases están organizadas en una estructura arbórea que se denomina jerarquía de herencia</p></li>
+	<li>Las clases están organizadas en una estructura arbórea que se denomina jerarquía de herencia</li> 
 </ol>
+-->
+
+<br><br>
+	1. Todo son objetos. <br>
+	2. Los objetos funcionan haciéndose peticiones de uno a otro mediante paso de mensajes.<br>
+	3. Cada objeto tiene su propia memoria, que consta de otros objetos.<br>
+	4. Cada objeto es un ejemplar (instancia) de una clase. Una clase agrupa objetos similares.<br>
+	5. La clase es el repositorio del comportamiento asociado con un objeto.<br>
+	6. Las clases están organizadas en una estructura arbórea que se denomina jerarquía de herencia<br>
 </p>
 </p>
 
@@ -312,13 +331,29 @@ En general no se encuentran desventajas a la POO, pero en algunos casos puede re
 <br><br>
 </p>
 
+<p id="post_text">
+En el paradigma orientado a objetos son pocas las desventajas con las que nos encontramos, pero de alguna manera siempre hay inconformidad; por ejemplo, una de las críticas que se han formulado es sobre como se enseña y por tanto como se aplica el paradigma orientado a Objetos.
+Algunas veces cuando tratamos con el Paradigma Orientado a Objetos se hace la analogía de que los objetos serían los sustantivos de una oración, mientras que los métodos serían los verbos de la misma, aquí es donde surge una inconformidad ya que verbo y el sustantivo son elementos independientes, pero un objeto y sus métodos nunca pueden existir de manera independiente el uno del otro. Como lo menciona Buko Obele :<br>
+
+<p id="post_cita">
+Buko Obele, citado en http://www.infoq.com/news/2007/11/oop-beyond-verb-noun<br>
+“La palabra "persona" en una oración no depende de cualquier noción de un verbo en particular [...]. En la práctica nos nunca decimos que una persona que no puede, por ejemplo, "correr" no es una persona [... ].No existen en orientado a objetos conceptos de diseño separado y aparte de sus métodos en absoluto - en su lugar, el punto es que están estrictamente constituidos por sus métodos.”<br></p>
+
+</p>
+<br>
+<p id="post_text">
+Otra cosa criticada, es que las personas ocupamos el paradigma aplicando metáforas para visualizar y descomponer un problema, pero los inconformes argumentan que una metáfora sólo representa en cierta medida al sistema real y nunca de manera completa.
+Con lo anterior se observa que hay inconformidad no tanto con el Paradigma Orientado a Objetos, sino más bien con la forma en la que se enseña, ya que en estos tiempos la concepción e implementación de Orientado a Objetos difiere del paradigma que se tenía cuando se creó Smalltlak.<br>
+
+</p>
 
 
-	<img src="img/portfolio/linea_punteada.png" id="line_divisora"/><br><br><br>
+
+	<img src="img/portfolio/linea_punteada.png" id="line_divisora"/><br>
 <p id="post_subtitle_bold">CONCLUSIONES</p> <br>
 
 <p id="post_text">
-El paradigma en general ha sido de mucha ayuda para la ingeniería de Software, los métodos que ofrece son sencillos de comprender, ya que se basa en metáforas que normalmente hacemos, las características principales de la Programación Orientada a Objetos, son los mensajes que se envían entre las entidades que concebimos como objetos, las clases simplemente son los prototipos de unos objetos determinados, una cualidad importante de los objetos es su capacidad de ocultar su estado, siendo esto de mucha utilidad para evitar errores o poder solucionarlos de manera rápida. Prácticamente el paradigma ofrece más ventajas que desventajas, siendo la desventaja más recalcable la de dificultad de entender (al inicio) el paradigma cuando recién se viene de crear bajo una programación  estructurada.  </p>
+El paradigma en general ha sido de mucha ayuda para la ingeniería de Software, los métodos que ofrece son sencillos de comprender, ya que se basa en metáforas que normalmente hacemos, las características principales de la Programación Orientada a Objetos, son los mensajes que se envían entre las entidades que concebimos como objetos, las clases simplemente son los prototipos de unos objetos determinados, una cualidad importante de los objetos es su capacidad de ocultar su estado, siendo esto de mucha utilidad para evitar errores o poder solucionarlos de manera rápida. <br>Prácticamente el paradigma ofrece más ventajas que desventajas, siendo la desventaja más recalcable la de dificultad de entender (al inicio) el paradigma cuando recién se viene de crear bajo una programación  estructurada.  </p>
 
 <br><br>
 <p id="post_subtitle">Referencias Bibliográficas</p>
@@ -362,7 +397,7 @@ http://jlizardo.blogspot.mx/2008/04/ventajas-y-desventajas-del-anlisis.html <br>
                                     </strong>
                                 </li>
                                 <li>Fecha:
-                                    <strong><a href="#">Publicado el 27 de Abril</a>
+                                    <strong><a href="#">Publicado el 27 de Octubre</a>
                                     </strong>
                                 </li>
                                 <li>Tema:
